# DavidSpecularity

./: .gitignore  pyproject.toml
Figure1/: Figure1.ipynb  Figure1_COG.ipynb
Figure2/: README.txt
Figure3/: Figure3.ipynb  Figure3_COG.ipynb
Figure4/: Figure4.ipynb  SpecYearComp.ipynb
Figure4,S3,S4/: Fig4Test.ipynb  Fig4Wendian.py  Fig4Wendian.slurm  Figure4,S3,S4.ipynb  Figure4,S3,S4_COG.ipynb  Figure4.ipynb  Figure4_Full.ipynb  FigureS2.ipynb  plotting_dict_1819.csv
Figure4,S3,S4/logs/: error.60926895  error.60927695  error.60928121  error.60935370  error.61634331  error.61634567  error.61634632  error.61639838  error.61640108  error.61642062  error.61642174  error.61644427  error.61661391  error.61661392  error.61663399  error.61668313  error.61668314  output.60926895  output.60927695  output.60928121  output.60935370  output.61639838  output.61640108  output.61642174  output.61644427  output.61644428  output.61661391  output.61661392  output.61663399  output.61668313  output.61668314
Figure4,S3,S4/output1000m_win_250m_ovlp/: comp_diff.csv  crossovers_1617.csv  crossovers_1819.csv  matched_coords.csv  plotting_dict_1617.csv  plotting_dict_1819.csv
Figure4,S3,S4/output1000m_win_500m_ovlp/: comp_diff.csv  crossovers_1617.csv  crossovers_1819.csv  matched_coords.csv  plotting_dict_1617.csv  plotting_dict_1819.csv
Figure4,S3,S4/output1250m_win_625m_ovlp/: comp_diff.csv  crossovers_1617.csv  crossovers_1819.csv  matched_coords.csv  plotting_dict_1617.csv  plotting_dict_1819.csv
FigureS1/: FigS1Test.ipynb  FigureS1.ipynb
(+33 files in other folders)
