[project]
name = "davidspecularity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "ccrs>=1.0.0",
    "cmap>=0.7.2",
    "cmasher>=1.9.2",
    "dascore>=0.1.15",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "line-profiler>=5.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyproj>=3.7.2",
    "pyshp>=3.0.3",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "segyio>=1.9.14",
    "shapely>=2.1.2",
    "xarray[all,complete,full]>=2026.2.0",
]
